06-helm-kustomize/kustomize/overlays/prod/patch-ingress-user-id.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  ingressClassName: openshift-default
  rules:
  - host: webapp-03.apps.cluster1.openshift.vms.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: webapp
            port: 
              number: 8000
